<resources>
    <string name="app_name">Cordite</string>
    <string name="title_activity_maps">Map</string>

    <string name="shared_preferences_key">shared_preferences</string>

    <!-- <report-types> -->
    <string name="trailClosed">Trail Closed</string>
    <string name="photo">Take A Photo</string>

    <string name="construction">Construction</string>
    <string name="coolPlace">Cool Place</string>

    <string name="beCareful">Be Careful</string>
    <string name="waterFountain">Water Fountain</string>
    <string name="KM">KM Away</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="graph_btn_last_week">Last Week</string>
    <string name="graph_btn_last_month">Last Month</string>
    <string name="graph_btn_all_time">All time</string>
    <string name="graph_text_view">TextView</string>
    <string name="time_vs_Avg_Speed_Graph">Time Vs Avg Speed</string>
    <string name="time_vs_distance">Time Vs Distance</string>

    <!--&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->

    <!-- </report-types>-->
    
    <array name="journalImages">
        <item>@drawable/hiker1</item>
        <item>@drawable/hiker2</item>
        <item>@drawable/hiker3</item>
        <item>@drawable/hiker4</item>
        <item>@drawable/hiker5</item>
    </array>

</resources>
